[package]
name = "RwManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
egui_dnd = "0.3.0"
glob = "0.3.1"
gtk4 = "0.6.2"
minidom = "0.15.1"
quick-xml = "0.27.1"
regex = "1.7.1"
serde = "1.0.152"
serde_json = "1.0.93"
